group nodes by discovery rule
